# warehouse

./: README.md  docker-compose.yaml  docker-compose.yml
.github/workflows/: lint.yml  test.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_first_tables.py  001_init_schema.py  001_init_structure.py  002_sales.py
backend/api/: application.py  import_process.py
backend/api/config/: base.yaml  config.yaml  read.py
backend/api/persistence/: blob.py  connection.py  tables.py
backend/api/schemas/: external.py  internal.py
backend/api/services/: inventory.py  perpare_import.py  prepare_import.py  products.py  sales.py  stocks.py
backend/api/test/: conftest.py  test_integration_products.py  test_integration_sales.py  test_integration_services_inventory.py  test_integration_stocks.py  test_unit_config_read.py  test_unit_prepare_import.py
backend/deployment/: gunicorn-config.py
backend/deployment/production/: Dockerfile  docker-entrypoint.sh
backend/deployment/test/: Dockerfile  docker-entrypoint.sh
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/deployment/: nginx.conf
frontend/src/: App.vue  config.js  http_proxy.js
frontend/src/components/: AlertError.vue  AlertSuccess.vue  ManageProducts.vue  SaleDialog.vue
frontend/tests/: api-mock.json
frontend/tests/e2e/reports/: CHROME_103.0.5060.134__test-with-pageobjects.json  CHROME_103.0.5060.134__test-with-pageobjects.xml  CHROME_103.0.5060.134__test.json  CHROME_103.0.5060.134__test.xml
(+2 files in other folders)
