[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["maks <kontakt@maksymilianratajczyk.pl>"]
include = ["api", "alembic"]

[tool.poetry.dependencies]
python = "^3.10"
flask-smorest = "^0.38.1"
SQLAlchemy = "^1.4.39"
alembic = "^1.8.1"
psycopg2 = "^2.9.3"
Flask-Cors = "^3.0.10"
toml = "^0.10.2"
PyYAML = "^6.0"
pytest-mock = "^3.8.2"
pytest-cov = "^3.0.0"
schedule = "^1.1.0"
loguru = "^0.6.0"
minio = "^7.1.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
